--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -59,12 +59,49 @@ section {
 	border-color: #FFFFFF;
 }
 
-section#introduction {
-
-}
-
 section.highlight {
 	background-color: rgb(112, 115, 106);
 	background-color: rgba(112, 115, 106, 1);
 	color: rgb(1, 28, 38);`
+}
+
+section#navigation {
+	border-top-color: rgb(38, 38, 34);
+	border-top-color: rgba(38, 38, 34, 0.1);
+	border-top-style: solid;
+	border-top-width: 1px;
+
+	border-bottom-color: rgb(38, 38, 34);
+	border-bottom-color: rgba(38, 38, 34, 0.1);
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+}
+
+nav {
+	margin: 20px auto;
+	width: 740px;
+	z-index: 90px;
+}
+
+nav a {
+	display: inline-block;
+	height: 150px;
+	width: 150px;
+	margin: 0 15px;
+	background-color: rgb(38, 38, 34);
+	background-color: rgba(38, 38, 34, 1);
+	color: rgb(242, 242, 242);
+	color: rgba(242, 242, 242, 1);
+	line-height: 150px;
+	font-size: 2em;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 90px;
+	-webkit-transition: all 0.5s linear;
+	transition: all 0.5s linear;
+}
+
+nav a:hover {
+	background-color: rgb(242, 135, 5);
+	background-color: rgba(242, 135, 5, 1);
 }
