--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -10,6 +10,17 @@
 
 }
 
+@font-face {
+    font-family: 'AftasansRegular';
+    src: url('AftaSansThin-Regular-webfont.eot');
+    src: url('AftaSansThin-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('AftaSansThin-Regular-webfont.woff') format('woff'),
+         url('AftaSansThin-Regular-webfont.ttf') format('truetype'),
+         url('AftaSansThin-Regular-webfont.svg#AftasansRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 ::selection {
 	background-color: rgb(242, 135, 5);
@@ -20,7 +31,7 @@
 body {
 	background-color: rgb(138, 140, 132);
 	background-color: rgba(138, 140, 132, 1);
-	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
+	font-family: 'AftasansRegular', Helvetica, sans-serif;
 	font-weight: 300;
 	color: rgb(38, 38, 34);
 	color: rgba(38, 38, 34, 1);
@@ -34,12 +45,11 @@ body {
 header {
 	margin: 30px auto;
 	width: 1000px;
-	height: 100px;
 }
 
 header section#introduction h1 {
 	text-align: center;
-	font-size: 4em;
+	font-size: 8.25em;
 	text-shadow: 1px 1px 1px #70736A, 2px 2px 2px #70736A;
 }
 
@@ -86,15 +96,21 @@ section#about {
 	width: 900px;
 }
 
-section#bio {
-	font-size: 1.4em;
+section#about p {
+	margin: 20px auto;
 }
 
-h1 {
+section#bio {
 	font-size: 2em;
 }
 
+section h1 {
+	font-size: 4em;
+	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
+}
+
 nav {
+	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
 	margin: 20px auto;
 	width: 815px;
 	z-index: 90px;
@@ -102,7 +118,7 @@ nav {
 
 nav.pinned {
 	top:-80px;
-	left: -2px;
+	left: -5px;
 	margin: 0 auto;
 	width: 100%;
 	position: fixed;
@@ -123,7 +139,7 @@ nav a {
 	color: rgb(242, 242, 242);
 	color: rgba(242, 242, 242, 1);
 	line-height: 170px;
-	font-size: 2em;
+	font-size: 3em;
 	text-align: center;
 	text-decoration: none;
 	border-radius: 90px;
