--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -31,7 +31,7 @@
 body {
 	background-color: rgb(138, 140, 132);
 	background-color: rgba(138, 140, 132, 1);
-	font-family: 'AftasansRegular', Helvetica, sans-serif;
+	font-family: Helvetica, sans-serif;
 	font-weight: 300;
 	color: rgb(38, 38, 34);
 	color: rgba(38, 38, 34, 1);
@@ -97,7 +97,7 @@ section#about {
 }
 
 section#about p {
-	margin: 30px auto;
+	margin: 20px auto;
 }
 
 section#bio {
