Add styling to tileviews

--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -138,6 +138,9 @@ nav.pinned {
 
 nav.pinned a {
 	line-height: 220px;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(138, 140, 132, 0.8);
+	box-shadow: 0px 0px 10px 0px rgba(138, 140, 132, 0.8);
+	box-shadow: 0px 0px 10px 0px rgb(138, 140, 132);
 }
 
 nav a {
@@ -215,12 +218,18 @@ nav a.selected {
 }
 
 #tile .front {
-	background: red;
+	background-color: rgb(38, 38, 34);
+	background-color: rgba(38, 38, 34, 1);
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgb(138, 140, 132);
+	text-align: center;
+	font-size: 2em;
+	color: rgb(242, 242, 242);
+	line-height: 230px;
 }
 
 #tile .back {
-	background: blue;
-
 	/* Start with the back already facing back 8 */
 	-webkit-transform: rotateY(180deg);
 	transform: rotateY(180deg);
