--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -76,6 +76,10 @@ section#contact {
 	width: 815px;
 }
 
+section#navigation {
+	height: 190px;
+}
+
 section#contact a.contactIcon {
 	display: inline-block;
 	height: 170px;
@@ -176,7 +180,7 @@ nav {
 
 nav.pinned {
 	top:-80px;
-	left: -5px;
+	left: -4px;
 	margin: 0 auto;
 	width: 100%;
 	position: fixed;
