--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -55,7 +55,6 @@ header section#introduction h1 {
 
 footer {
 	width: 100%;
-	height: 100px;
 	background-color: rgb(112, 115, 106);
 	background-color: rgba(112, 115, 106, 1);
 }
@@ -145,9 +144,15 @@ section#contact a.email:hover {
 	background-color: rgba(7, 184, 60, 1);
 }
 
+section#contact img {
+	border: 1px solid rgba(112, 115, 106, 1);
+	-webkit-box-shadow: 15px 15px 1px 1px rgba(112, 115, 106, 1);
+	box-shadow: 15px 15px 1px 1px rgba(112, 115, 106, 1);
+}
+
 section#contact section#contactText p{
 	margin-top: 20px;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 	margin-left: 20px;
 	font-size: 1.75em;
 }
