--- a/personal-page/styles/styles.css
+++ b/personal-page/styles/styles.css
@@ -22,10 +22,9 @@
 
 }
 
-::selection {
-	background-color: rgb(242, 135, 5);
-	background-color: rgba(242, 135, 5, 1);
-	color: rgb(242, 242, 242);
+* {
+	margin: 0px;
+	padding: 0px;
 }
 
 body {
@@ -37,9 +36,30 @@ body {
 	color: rgba(38, 38, 34, 1);
 }
 
-*{
-	margin: 0px;
-	padding: 0px;
+::selection {
+	background-color: rgb(242, 135, 5);
+	background-color: rgba(242, 135, 5, 1);
+	color: rgb(242, 242, 242);
+}
+
+div.highlight {
+	background-color: rgb(112, 115, 106);
+	background-color: rgba(112, 115, 106, 1);
+	color: rgb(1, 28, 38);
+	border-top-color: rgb(38, 38, 34);
+	border-top-color: rgba(38, 38, 34, 0.1);
+	border-top-style: solid;
+	border-top-width: 1px;
+
+	border-bottom-color: rgb(38, 38, 34);
+	border-bottom-color: rgba(38, 38, 34, 0.1);
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+}
+
+section h1 {
+	font-size: 4em;
+	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
 }
 
 header {
@@ -53,56 +73,85 @@ header section#introduction h1 {
 	text-shadow: 1px 1px 1px #70736A, 2px 2px 2px #70736A;
 }
 
-footer {
-	width: 100%;
-	background-color: rgb(112, 115, 106);
-	background-color: rgba(112, 115, 106, 1);
+/* Navigation Section */
+
+section#navigation {
+	height: 190px;
 }
 
-footer div#copyright {
+nav {
+	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
 	margin: 20px auto;
-	width: 800px;
+	width: 815px;
+	z-index: 90;
+}
+
+nav.pinned {
+	top:-80px;
+	left: -4px;
+	margin: 0 auto;
+	width: 100%;
+	position: fixed;
 	text-align: center;
 }
 
-footer a:link {
-	text-decoration: none;
+nav.pinned a {
+	line-height: 220px;
+	-webkit-box-shadow: 0px 0px 8px 0px rgba(138, 140, 132, 0.8);
+	box-shadow: 0px 0px 8px 0px rgb(138, 140, 132);
+	box-shadow: 0px 0px 8px 0px rgba(138, 140, 132, 0.8);
+}
+
+nav a {
+	display: inline-block;
+	height: 170px;
+	width: 170px;
+	margin: 0 15px;
+	background-color: rgb(38, 38, 34);
+	background-color: rgba(38, 38, 34, 1);
 	color: rgb(242, 242, 242);
 	color: rgba(242, 242, 242, 1);
-}
-
-footer a:visited {
+	line-height: 170px;
+	font-size: 3em;
+	text-align: center;
 	text-decoration: none;
-	color: rgb(242, 242, 242);
-	color: rgba(242, 242, 242, 1);
+	border-radius: 90px;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
-footer a:hover {
-	text-decoration: none;
-	color: rgb(242, 135, 5);
-	color: rgba(242, 135, 5, 1);
+nav a:hover {
+	background-color: rgb(242, 135, 5);
+	background-color: rgba(242, 135, 5, 1);
 }
 
-footer a:active {
-	text-decoration: none;
-	color: rgb(242, 135, 5);
-	color: rgba(242, 135, 5, 1);
+nav a.selected {
+	background-color: rgb(242, 135, 5);
+	background-color: rgba(242, 135, 5, 1);
 }
 
-mark {
-	color: rgb(242, 135, 5);
-	color: rgba(242, 135, 5, 1);
-	background-color: transparent;
-	text-shadow: 1px 1px 1px #70736A, 2px 2px 2px #70736A;
+/* End Navigation Section */
+
+section#bio {
+	font-size: 1.75em;
 }
+
+section#about {
+	margin: 20px auto;
+	width: 900px;
+}
+
+section#about p {
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-bottom: 20px;
+}
+
+/* Contact Section */
 
 section#contact {
 	margin: 20px auto;
 	width: 815px;
-}
-
-section#navigation {
-	height: 190px;
 }
 
 section#contact a.contactIcon {
@@ -167,98 +216,14 @@ section#contact section#contactButtons {
 	margin-bottom: 40px;
 }
 
-div.highlight {
-	background-color: rgb(112, 115, 106);
-	background-color: rgba(112, 115, 106, 1);
-	color: rgb(1, 28, 38);
-	border-top-color: rgb(38, 38, 34);
-	border-top-color: rgba(38, 38, 34, 0.1);
-	border-top-style: solid;
-	border-top-width: 1px;
+/* End Contact Section */
 
-	border-bottom-color: rgb(38, 38, 34);
-	border-bottom-color: rgba(38, 38, 34, 0.1);
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-}
+/* TileView Section */
 
 section#portfolio {
 	margin: 20px auto;
 	width: 900px;
 }
-
-section#about {
-	margin: 20px auto;
-	width: 900px;
-}
-
-section#about p {
-	margin-top: 20px;
-	margin-left: 20px;
-	margin-bottom: 20px;
-}
-
-section#bio {
-	font-size: 1.75em;
-}
-
-section h1 {
-	font-size: 4em;
-	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
-}
-
-nav {
-	font-family: 'LeagueGothicRegular', Helvetica, sans-serif;
-	margin: 20px auto;
-	width: 815px;
-	z-index: 90;
-}
-
-nav.pinned {
-	top:-80px;
-	left: -4px;
-	margin: 0 auto;
-	width: 100%;
-	position: fixed;
-	text-align: center;
-}
-
-nav.pinned a {
-	line-height: 220px;
-	-webkit-box-shadow: 0px 0px 8px 0px rgba(138, 140, 132, 0.8);
-	box-shadow: 0px 0px 8px 0px rgb(138, 140, 132);
-	box-shadow: 0px 0px 8px 0px rgba(138, 140, 132, 0.8);
-}
-
-nav a {
-	display: inline-block;
-	height: 170px;
-	width: 170px;
-	margin: 0 15px;
-	background-color: rgb(38, 38, 34);
-	background-color: rgba(38, 38, 34, 1);
-	color: rgb(242, 242, 242);
-	color: rgba(242, 242, 242, 1);
-	line-height: 170px;
-	font-size: 3em;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 90px;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-}
-
-nav a:hover {
-	background-color: rgb(242, 135, 5);
-	background-color: rgba(242, 135, 5, 1);
-}
-
-nav a.selected {
-	background-color: rgb(242, 135, 5);
-	background-color: rgba(242, 135, 5, 1);
-}
-
-/* TileView Section */
 
 .tileView div {
 	display: inline-block;
@@ -336,3 +301,42 @@ nav a.selected {
 }
 
 /* End TileView Section */
+
+/* Footer Section */
+footer {
+	width: 100%;
+	background-color: rgb(112, 115, 106);
+	background-color: rgba(112, 115, 106, 1);
+}
+
+footer div#copyright {
+	margin: 20px auto;
+	width: 800px;
+	text-align: center;
+}
+
+footer a:link {
+	text-decoration: none;
+	color: rgb(242, 242, 242);
+	color: rgba(242, 242, 242, 1);
+}
+
+footer a:visited {
+	text-decoration: none;
+	color: rgb(242, 242, 242);
+	color: rgba(242, 242, 242, 1);
+}
+
+footer a:hover {
+	text-decoration: none;
+	color: rgb(242, 135, 5);
+	color: rgba(242, 135, 5, 1);
+}
+
+footer a:active {
+	text-decoration: none;
+	color: rgb(242, 135, 5);
+	color: rgba(242, 135, 5, 1);
+}
+
+/* End Footer Section */
