--- a/blog-site/styles/site.css
+++ b/blog-site/styles/site.css
@@ -24,8 +24,8 @@ body {
 }
 
 header {
-	background-color: rgb(126, 138, 162);
-	color: rgb(38, 50, 72);
+	background-color: rgb(189, 189, 189);
+	color: rgb(82, 82, 82);
 	height: 50px;
 	width: 100%;
 
@@ -35,8 +35,8 @@ header {
 }
 
 header:hover {
-	background-color: rgb(38, 50, 72);
-	color: rgb(126, 138, 162);
+	background-color: rgb(82, 82, 82);
+	color: rgb(189, 189, 189);
 }
 
 header p {
@@ -46,4 +46,29 @@ header p {
 }
 
 section#content {
+	position: relative;
+}
+
+section#content ul {
+	list-style-type: none;
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+section#content ul li {
+	font-size: 2em;
+	width: 800px;
+	margin: 0px auto;
+	padding-top: 10px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 10px;
+}
+
+section#content ul li a {
+
+}
+
+section#content ul li span {
+	float: right;
 }
