--- a/blog-site/styles/site.css
+++ b/blog-site/styles/site.css
@@ -18,25 +18,21 @@
 }
 
 body {
-	background-color: rgb(242, 242, 242);
+	background-color: #FFFFFF;
+	color: rgb(145, 145, 145);
 	font-family: 'OpenSans', Helvetica;
 	font-size: 12px;
 }
 
 header {
-	background-color: rgb(189, 189, 189);
-	color: rgb(82, 82, 82);
+	background-color: rgb(245, 245, 245);
+	color: rgb(0, 0, 0);
 	height: 50px;
 	width: 100%;
 
 	position: fixed;
 	top: 0px;
 	left: 0px;
-}
-
-header:hover {
-	background-color: rgb(82, 82, 82);
-	color: rgb(189, 189, 189);
 }
 
 header p {
@@ -54,43 +50,45 @@ section#content ul li a {
 }
 
 section#content ul li a:link {
-	color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li a:visited {
-	color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li a:hover {
-	color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li a:focus {
-	color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li a:active {
-	color: rgb(82, 82, 82);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li:hover a:link {
-	color: rgb(229, 229, 229);
+	color: rgb(0, 0, 0);
+	border-bottom: 3px solid rgb(0, 0, 0);
 }
 
 section#content ul li:hover a:visited {
-	color: rgb(229, 229, 229);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li:hover a:hover {
-	color: rgb(229, 229, 229);
+	color: rgb(0, 0, 0);
+	border-bottom: 3px solid rgb(0, 0, 0);
 }
 
 section#content ul li:hover a:focus {
-	color: rgb(229, 229, 229);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul li:hover a:active {
-	color: rgb(229, 229, 229);
+	color: rgb(0, 0, 0);
 }
 
 section#content ul {
@@ -107,16 +105,16 @@ section#content ul li {
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-bottom: 10px;
+
+	border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 section#content ul li:hover {
-	background-color: rgb(189, 189, 189);
+	background-color: rgb(245, 245, 245);
 }
 
-section#content ul li a {
-
-}
-
-section#content ul li span {
+section#content ul li div.postDate {
 	float: right;
+	font-size: 0.75em;
+	line-height: 2em;
 }
